--- a/TrafficInspection/src/main/resources/application.yml
+++ b/TrafficInspection/src/main/resources/application.yml
@@ -1,14 +1,24 @@
+server:
+  port: 8081
 spring:
   application:
-    name: TrafficInspection
+    name: TrafficInspectionApp
   datasource:
-    url: jdbc:postgresql://localhost:5432/TrafficInspectionDB
+#    url: jdbc:postgresql://localhost:15432/traffic_inspection_db
+    url: jdbc:postgresql://postgres/traffic_inspection_db
     username: postgres
-    password: postgres
+    password: secret
+    driver-class-name: org.postgresql.Driver
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-server:
-  port: 8081
+    hibernate:
+      ddl-auto: none
+  flyway:
+    enabled: true
+    url: ${spring.datasource.url}
+    user: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+    locations: classpath:db/migration
